# authService

./: .gitignore  README.md  file_contents_output.txt  install.nix  manage.py  pyproject.toml  requirements.txt  run.nix
authservice/: settings.py
config/: app_modules.py  apps.py  asgi.py  authentication.py  schema.py  services.py  settings.py  strawberry_schema.py  urls.py  wsgi.py
src/core/application/dto/: pagination.py
src/core/application/interfaces/: base_use_case.py
src/core/application/services/: password_service.py
src/core/application/use_cases/: __init__.py  base_crud_use_cases.py  base_search_use_case.py
src/core/application/use_cases/base/: __init__.py  commands.py  delete_entity.py  get_entity.py
src/core/domain/entities/: base_entity.py
src/core/domain/repositories/: base_repository.py
src/core/domain/repositories/criteria/: base_criteria.py  boolean_criteria.py  date_range_criteria.py  factory.py  in_criteria.py  ordering_criteria.py  pagination_criteria.py  range_criteria.py  status_criteria.py  text_search_criteria.py
src/core/domain/value_objects/: email.py
src/core/exceptions/: base_exceptions.py
src/core/infrastructure/containers/: __init__.py  base_container.py  django_setup.py  registry.py
src/core/infrastructure/database/: base_repository.py  repositories.py
src/core/infrastructure/database/mappers/: __init__.py  base_mapper.py
src/core/infrastructure/security/: password_service.py
src/core/infrastructure/web/strawberry/: base_mutation.py  base_query.py  decorators.py  generic_resolvers.py  helpers.py  response_factories.py  response_factory.py  types.py
src/core/infrastructure/web/strawberry/helpers/: __init__.py  converters.py  execution.py  processors.py  responses.py  validators.py
src/core/infrastructure/web/strawberry/responses/: __init__.py  (+4 more)
src/feature/sessions/application/: __init__.py
src/feature/sessions/application/use_cases/: __init__.py  session_use_cases.py
src/feature/sessions/domain/entities/: session.py
src/feature/sessions/domain/inputs/: find.py  find_one.py  login.py  logout.py  refresh.py
src/feature/sessions/domain/repositories/: session_repository.py
src/feature/sessions/domain/schemes/: __init__.py  session.py  session_fields.py
src/feature/sessions/domain/types/: __init__.py  standard_responses.py
src/feature/sessions/domain/value_objects/: session_status.py  token_type.py
src/feature/sessions/infrastructure/database/: models.py  repositories.py
src/feature/sessions/infrastructure/graphql/: __init__.py  auth_resolvers.py
src/feature/sessions/infrastructure/services/: __init__.py  auth_service.py  jwt_service.py
src/feature/sessions/infrastructure/web/: apps.py  models.py
src/feature/users/: module.py
src/feature/users/application/: __init__.py
src/feature/users/application/command_handlers/: create.py  delete.py  update.py
src/feature/users/application/query_handlers/: find.py  find_one.py
src/feature/users/application/use_cases/: __init__.py  create_user.py  delete_user.py  get_user.py  search_users.py  update_user.py  user_use_cases.py
src/feature/users/domain/cqrs/: commands.py  queries.py
src/feature/users/domain/entities/: user.py
src/feature/users/domain/enums/: status.py
src/feature/users/domain/inputs/: create.py  find.py  find_one.py  update.py
src/feature/users/domain/repositories/: user_repository.py
src/feature/users/domain/schemes/: __init__.py  user.py  user_fields.py
src/feature/users/domain/types/: __init__.py  create.py  delete.py  find.py  find_one.py  standard_responses.py  update.py
src/feature/users/domain/value_objects/: password.py  user_status.py
src/feature/users/infrastructure/containers/: __init__.py  user_container.py
src/feature/users/infrastructure/converters/: user_converter.py
src/feature/users/infrastructure/database/: models.py  repositories.py
src/feature/users/infrastructure/dependency_injection/: __init__.py  module.py  services.py
src/feature/users/infrastructure/graphql/: __init__.py  user_resolvers.py
src/feature/users/infrastructure/services/: create.py  delete.py  find.py  find_one.py  update.py  user_service.py
src/feature/users/infrastructure/web/: apps.py  models.py
src/shared/: __init__.py
src/shared/criteria/: __init__.py  base_criteria.py  converter.py  factory.py  graphql_inputs.py  input_converter.py  prepare.py  service_helper.py
src/shared/criteria/implementations/: __init__.py  boolean_criteria.py  date_range_criteria.py  in_criteria.py  ordering_criteria.py  pagination_criteria.py  range_criteria.py  status_criteria.py  text_search_criteria.py
(+25 files in other folders)
